[package]
name = "ts7200"
version = "0.1.0"
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
edition = "2018"

[dependencies]
armv4t_emu = "0.1"
byteorder = "1.3"
crossbeam-channel = "0.4"
# this should be ">=0.4.1", but I haven't released 0.4.1 yet...
gdbstub = { git = "https://github.com/daniel5151/gdbstub.git" }
goblin = "0.1"
log = "0.4"
pretty_env_logger = "0.3"
structopt = "0.3"
termion = "1.5"
