[package]
name = "ts7200"
version = "0.1.0"
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
edition = "2018"

[dependencies]
armv4t_emu = "0.1"
byteorder = "1.3"
crossbeam-channel = "0.4"
gdbstub = { git = "https://github.com/daniel5151/gdbstub.git", tag = "0.4.5" }
goblin = "0.1"
log = "0.4"
pretty_env_logger = "0.3"
structopt = "0.3"
termion = "1.5"
